--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,12 @@ body {
 	color: var(--white);
 	padding: 1rem;
 	border-radius: 0.625rem;
+	cursor: pointer;
+	transition: all 400ms ease-in-out;
+}
+.btn:hover,
+.btn:focus {
+	background-color: hsl(158, 42%, 18%);
 }
 .btn img {
 	width: auto;
